--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
     <div>
       <h1>Cristel Rebucan</h1>
       <nav>
-        <a href="main.html">Main</a>
+        <a href="index.html">Main</a>
         <a href="about.html">About Me</a>
         <a href="experience.html">Experience</a>
         <a href="education.html">Educational Background</a>
@@ -52,3 +52,4 @@
   <footer>© 2025 Cristel Rebucan</footer>
 </body>
 </html>
+
