--- a/resume.html
+++ b/resume.html
@@ -89,13 +89,13 @@
                 <div>
                     <div>
                         <nav>
-                            <a href="main.html">Main</a>
+                            <a href="index.html">Main</a>
                             <a href="about.html">About Me</a>
                             <a href="experience.html">Experience</a>
                             <a href="education.html">Educational Background</a>
                             <a href="drawing.html">Artworks</a>
                             <a href="resume.html">My resume</a>
-                        </nav>
+                         </nav>
                         <br>
                         <h1>Cristel C. Rebucan</h1>
                         <div class="subtitle">Aspiring IT / Software Developer • BSIT</div>
@@ -188,3 +188,4 @@
     </div>
 </body>
 </html>
+
