--- a/education.html
+++ b/education.html
@@ -23,7 +23,7 @@
     <div>
       <h1>Cristel Rebucan</h1>
       <nav>
-        <a href="main.html">Main</a>
+        <a href="index.html">Main</a>
         <a href="about.html">About Me</a>
         <a href="experience.html">Experience</a>
         <a href="education.html">Educational Background</a>
@@ -73,3 +73,4 @@
   <footer>© 2025 Cristel Rebucan</footer>
 </body>
 </html>
+
